--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,24 +14,27 @@
         tools:targetApi="31">
         <activity
             android:name=".Game4Screen"
+            android:parentActivityName=".GameScreen"
             android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GameScreen" />
         </activity>
         <activity
             android:name=".Game6Screen"
+            android:parentActivityName=".GameScreen"
             android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GameScreen" />
         </activity>
         <activity
             android:name=".Game20Screen"
+            android:parentActivityName=".GameScreen"
             android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GameScreen" />
         </activity>
         <activity
             android:name=".CreditsScreen"
@@ -51,10 +54,11 @@
         </activity>
         <activity
             android:name=".GameScreen"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".MainActivity"
