--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".Game4Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -23,6 +24,7 @@
         <activity
             android:name=".Game6Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -31,6 +33,7 @@
         <activity
             android:name=".Game8Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -39,6 +42,7 @@
         <activity
             android:name=".Game10Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -47,6 +51,7 @@
         <activity
             android:name=".Game12Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -55,6 +60,7 @@
         <activity
             android:name=".Game14Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -63,6 +69,7 @@
         <activity
             android:name=".Game16Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -71,6 +78,7 @@
         <activity
             android:name=".Game18Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -79,6 +87,7 @@
         <activity
             android:name=".Game20Screen"
             android:parentActivityName=".GameScreen"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
